--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -2,8 +2,8 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans,
+    Helvetica Neue, sans-serif;
 }
 
 a {
@@ -13,6 +13,22 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+.space__8 {
+  margin-top: 8px;
+}
+
+.space__16 {
+  margin-top: 16px;
+}
+
+.space__24 {
+  margin-top: 24px;
+}
+
+.space__32 {
+  margin-top: 32px;
 }
 
 @media (prefers-color-scheme: dark) {
